--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 placeholder="E-posta"
               />
             </label>
-            <button class="footer-subscribe-button">
+            <button class="footer-subscribe-button" type="submit">
               Subscribe
               <svg class="footer-buton-svg" width="24" height="24">
                 <use href="./images/icons.svg#icn-send"></use>
@@ -526,7 +526,9 @@
         <p class="modal-form-window-paragraph"></p>
         <form>
           <div class="modal-form-window-form">
-            <label class="modal-form-window-form-label-name">Name</label>
+            <label class="modal-form-window-form-label-name" for="user-name"
+              >Name</label
+            >
             <div class="modal-form-window-form-label-name-input-div">
               <input
                 class="modal-form-window-form-label-name-input"
@@ -594,7 +596,6 @@
             </div>
           </div>
           <div class="modal-form-window-form">
-            <label class="modal-form-window-form-label-name">Comment</label>
             <div class="modal-form-window-form-label-name-input-div">
               <input
                 class="modal-form-window-form-label-name-input-checkbox visually-hidden"
