--- a/index.html
+++ b/index.html
@@ -498,12 +498,12 @@
         <div class="form-container-footer">
           <p class="form-container-footer-paragraph">Subscribe</p>
           <form class="footer-form">
-            <label class="footer-form-label" for="">
+            <label class="footer-form-label">
               <input
                 class="footer-subscribe-input"
                 type="email"
                 name="subscribe"
-                placeholder="e-posta"
+                placeholder="E-posta"
               />
             </label>
             <button class="footer-subscribe-button" type="submit">
@@ -568,9 +568,9 @@
             <div class="modal-form-window-form-label-name-input-div">
               <input
                 class="modal-form-window-form-label-name-input"
-                id="user-name"
-                name="user-name"
-                type="text"
+                id="email"
+                name="email"
+                type="email"
               />
               <svg
                 class="modal-form-window-form-label-name-input-svg"
@@ -590,7 +590,6 @@
               class="modal-form-window-form-label-name-input-textarea"
               id="user-comment"
               name="user-comment"
-              type="text"
               placeholder="Text input"
             ></textarea>
           </div>
