--- a/index.html
+++ b/index.html
@@ -546,12 +546,14 @@
             </div>
           </div>
           <div class="modal-form-window-form">
-            <label class="modal-form-window-form-label-name">Phone</label>
+            <label class="modal-form-window-form-label-name" for="phone"
+              >Phone</label
+            >
             <div class="modal-form-window-form-label-name-input-div">
               <input
                 class="modal-form-window-form-label-name-input"
-                id="user-name"
-                name="user-name"
+                id="phone"
+                name="phone"
                 type="text"
               />
               <svg
