--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 class="footer-subscribe-input"
                 type="email"
                 name="subscribe"
-                placeholder="E-posta"
+                placeholder="e-posta"
               />
             </label>
             <button class="footer-subscribe-button" type="submit">
@@ -595,7 +595,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-form-window-form">
+          <div class="modal-form-window-form-user-privacy">
             <input
               class="modal-form-window-form-label-name-input-checkbox visually-hidden"
               id="user-privacy"
