--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 class="footer-subscribe-input"
                 type="email"
                 name="subscribe"
-                placeholder="E-posta"
+                placeholder="E-mail"
               />
             </label>
             <button class="footer-subscribe-button" type="submit">
