--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
               for="user-privacy"
               class="modal-form-window-form-label-name-input-checkbox-accept-text"
               >I accept the terms and conditions of the
-              <span class="Privacy-Policy">
+              <span class="privacy-policy">
                 <svg
                   class="modal-form-window-form-label-name-input-checkbox-svg"
                   width="10"
