--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         </div>
         <div class="form-container-footer">
           <p class="form-container-footer-paragraph">Subscribe</p>
-          <form class="footer-form" type="submit">
+          <form class="footer-form">
             <label class="footer-form-label">
               <input
                 class="footer-subscribe-input"
@@ -524,7 +524,7 @@
           </svg>
         </button>
         <p class="modal-form-window-paragraph"></p>
-        <form type="submit">
+        <form>
           <div class="modal-form-window-form">
             <label class="modal-form-window-form-label-name" for="user-name"
               >Name</label
